--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- SWIPER -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
     <script defer src="./js/main.js"></script>
   </head>
   <body>
@@ -364,7 +369,7 @@
         </ul>
 
       </div>
-
+      <!--BADGES-->
       <div class="badges">
         <div class="badge">
           <img src="./images/badge1.jpg" alt="Badge" />
@@ -375,50 +380,107 @@
       </div>
     </header>
 
-    <!-- VISUAL -->
-    <section class="visual">
-      <div class="inner">
-        <div class="title fade-in">
-          <img src="./images/visual_title.png" alt="STARBUCKS DELIGHTFUL START TO THE YEARS" />
-          <a href="javascript:void(0)" class="btn btn--brown">자세히 보기</a>
-        </div>
-        <div class="fade-in">
-          <img src="./images/visual_cup1.png" alt="new OATMEAL LATTE" class="cup1 image" />
-          <img src="./images/visual_cup1_text.png" alt="오트밀 라떼" class="cup1 text" />
-        </div>
-        <div class="fade-in">
-          <img src="./images/visual_cup2.png" alt="NEW STARBUCK CARABEL MOCHA" class="cup2 image" />
-          <img src="./images/visual_cup2_text.png" alt="스타벅스 카라멜 모카" class="cup2 text" />
-        </div>
-        <div class="fade-in">
-          <img src="./images/visual_spoon.png" alt="Spoon" class="spoon" />
-        </div>
-        
+  <!--VISUAL-->
+  <section class="visual">
+    <div class="inner">
+
+      <div class="title fade-in">
+        <img src="./images/visual_title.png" alt="STARBUCKS DELIGHTFUL START TO THE YEARS" />
+        <a href="javascript:void(0)" class="btn btn--brown">자세히 보기</a>
       </div>
-    </section>
+      <div class="fade-in">
+        <img src="./images/visual_cup1.png" alt="new OATMEAL LATTE" class="cup1 image" />
+        <img src="./images/visual_cup1_text.png" alt="오트밀 라떼" class="cup1 text" />
+      </div>
+      <div class="fade-in">
+        <img src="./images/visual_cup2.png" alt="new STARBUCKS CARAMEL CRUMBLE MOCHA" class="cup2 image" />
+        <img src="./images/visual_cup2_text.png" alt="스타벅스 카라멜 크럼블 모카" class="cup2 text" />
+      </div>
+      <div class="fade-in">
+        <img src="./images/visual_spoon.png" alt="Spoon" class="spoon" />
+      </div>
 
-    <section class="notice">
-      <div class="notice-line">
-        <div class="bg-left"></div>
-        <div class="bg-right"></div>
-        <div class="inner">
+    </div>
+  </section>
 
-          <div class="inner__left">
-            <h2>공지사항</h2>
-            <div class="swipe-container"></div>
-            <a href="javascript:void(0)" class="notice-line__more">
-              <div class="material-icons">add_circle</div>
-            </a>
-          </div>
-          <div class="inner__right">
-            <h2>스타벅스 프로모션</h2>
-            <div class="toggle-promotion">
-              <div class="material-icons">upload</div>
+<!--NOTICE-->
+<section class="notice">
+
+  <!--NOTICE LINE-->
+  <div class="notice-line">
+    <div class="bg-left"></div>
+    <div class="bg-right"></div>
+    <div class="inner">
+
+      <div class="inner__left">
+        <h2>공지사항</h2>
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <a href="javascript:void(0)">크리스마스 & 연말연시 스타벅스 매장 영업시간 변경 안내</a>
+            </div>
+            <div class="swiper-slide">
+              <a href="javascript:void(0)">[당첨자 발표] 2021 스타벅스 플래너 영수증 이벤트</a>
+            </div>
+            <div class="swiper-slide">
+              <a href="javascript:void(0)">스타벅스커피 코리아 애플리케이션 버전 업데이트 안내</a>
+            </div>
+            <div class="swiper-slide">
+              <a href="javascript:void(0)">[당첨자 발표] 뉴이어 전자영수증 이벤트</a>
             </div>
           </div>
         </div>
+        <a href="javascript:void(0)" class="notice-line__more">
+          <span class="material-icons">add_circle</span>
+        </a>
       </div>
-    </section>
+
+      <div class="inner__right">
+        <h2>스타벅스 프로모션</h2>
+        <div class="toggle-promotion open">
+          <div class="material-icons">upload</div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+    <div class="swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="./images/promotion_slide1.jpg" alt="2021 뉴이어, 스타벅스와 함께 즐겁고 활기차게 시작하세요!" />
+          <a href="javascript:void(0)" class="btn">자세히 보기</a>
+        </div>
+        <div class="swiper-slide">
+          <img src="./images/promotion_slide2.jpg" alt="기간 내 스타벅스 카드 e-Gift를 3만원 이상 선물 시, 아메리카노 e-쿠폰을 드립니다." />
+          <a href="javascript:void(0)" class="btn">자세히 보기</a>
+        </div>
+        <div class="swiper-slide">
+          <img src="./images/promotion_slide3.jpg" alt="뉴이어 푸드와 제조 음료를 세트로 구매 시, 뉴이어 음료 BOGO(1+1) 쿠폰을 드립니다." />
+          <a href="javascript:void(0)" class="btn">자세히 보기</a>
+        </div>
+        <div class="swiper-slide">
+          <img src="./images/promotion_slide4.jpg" alt="신년 MD 상품 포함 3만원 이상 구매 고객께 아메리카노(톨사이즈) 쿠폰을 드립니다." />
+          <a href="javascript:void(0)" class="btn">자세히 보기</a>
+        </div>
+        <div class="swiper-slide">
+          <img src="./images/promotion_slide5.jpg" alt="2017 DIGITAL LUCKY DRAW 100% 당첨의 행운을 드립니다!" />
+          <a href="javascript:void(0)" class="btn">자세히 보기</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="swiper-pagination"></div>
+
+    <div class="swiper-prev">
+      <span class="material-icons">arrow_back</span>
+    </div>
+    <div class="swiper-next">
+      <span class="material-icons">arrow_forward</span>
+    </div>
+
+  </div> -->
+</section>
 
   </body>
 </html>
