19. 요소 슬라이드 -요소 가운데배치

--- a/index.html
+++ b/index.html
@@ -445,6 +445,12 @@
     </div>
   </div>
 
+  <div class="promotion">
+    <div class="swiper-container">
+      TEST!
+    </div>
+  </div>
+
     <div class="swiper-container">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
@@ -479,7 +485,7 @@
       <span class="material-icons">arrow_forward</span>
     </div>
 
-  </div> -->
+  </div>
 </section>
 
   </body>
