24. 유튜브 영상 배경 - Youtube iframe API(1)

--- a/index.html
+++ b/index.html
@@ -517,6 +517,14 @@
     </div>
   </section>
 
+  <!-- YouTUBE VIDEO -->
+  <div class="youtube">
+    <div class="youtube__area">
+      <div id="player"></div>
+    </div>
+    <div class="youtubr__cover"></div>
+  </div>
+
   <!--TO TOP BUTTON-->
   <div id="to-top">
     <div class="material-icons">arrow_upward</div>
