--- a/index.html
+++ b/index.html
@@ -494,7 +494,6 @@
       <div class="swiper-prev">
         <span class="material-icons">arrow_back</span>
       </div>
-      
       <div class="swiper-next">
         <span class="material-icons">arrow_forward</span>
       </div>
@@ -502,45 +501,49 @@
     </div>
   </section>
 
-  <!-- REWARDS -->
+
+  <!--REWARDS-->
   <section class="rewards">
     <div class="bg-left"></div>
     <div class="bg-right"></div>
     <div class="inner">
+
       <div class="btn-group">
         <div class="btn btn--reverse sign-up">회원가입</div>
         <div class="btn sign-in">로그인</div>
         <div class="btn gift">e-Gift 선물하기</div>
       </div>
 
-
     </div>
   </section>
 
-  <!-- YouTUBE VIDEO -->
-  <div class="youtube">
+
+  <!--YOUTUBE VIDEO-->
+  <section class="youtube">
     <div class="youtube__area">
       <div id="player"></div>
     </div>
-    <div class="youtubr__cover"></div>
+    <div class="youtube__cover"></div>
     <div class="inner">
 
       <img src="./images/floating1.png" alt="Icon" class="floating floating1" />
       <img src="./images/floating2.png" alt="Icon" class="floating floating2" />
-      
-    </div>
-  </div>
 
-  <!-- SEASON PRODUCT -->
-  <section class="season-product">
+    </div>
+  </section>
+
+
+  <!--SEASON PRODUCT-->
+  <section class="season-product scroll-spy">
     <div class="inner">
+
       <img src="./images/floating3.png" alt="Icon" class="floating floating3" />
-      <img src="./images/season_product_image.png" alt="" class="product" />
+      <img src="./images/season_product_image.png" alt="아이스 커피 블렌드" class="product back-to-position to-right delay-0" />
 
       <div class="text-group">
-        <img src="./images/season_product_text1.png" alt="" class="title">
-        <img src="./images/season_product_text2.png" alt="" class="description">
-        <div class="more">
+        <img src="./images/season_product_text1.png" alt="상쾌하게 여름을 반겨줄 시즌 원두 아이스 커피 블렌드" class="title back-to-position to-left delay-1" />
+        <img src="./images/season_product_text2.png" alt="아프리카와 라틴 아메리카 커피의 브렌드로 시트러스함과 은은한 캐러멜 향을 동시에 느낄 수 있으며, 차갑게 즐길 때 풍미가 더욱 깊어지는 원두입니다." class="description back-to-position to-left delay-2" />
+        <div class="more back-to-position to-left delay-3">
           <a href="javascript:void(0)" class="btn">자세히 보기</a>
         </div>
       </div>
@@ -548,47 +551,50 @@
     </div>
   </section>
 
-  <!-- RESERVE COFFEE -->
-  <section class="reserve-coffee">
+
+  <!--RESERVE COFFEE-->
+  <section class="reserve-coffee scroll-spy">
     <div class="inner">
 
-      <img src="./images/reserve_logo.png" alt="" class="reserve_logo" />
-
+      <img src="./images/reserve_logo.png" alt="" class="reserve-logo back-to-position to-right delay-0" />
       <div class="text-group">
-        <img src="./images/reserve_text.png" alt="" class="description" />
-        <div class="more">
+        <img src="./images/reserve_text.png" alt="" class="description back-to-position to-right delay-1" />
+        <div class="more back-to-position to-right delay-2">
           <a href="javascript:void(0)" class="btn btn--gold">자세히 보기</a>
         </div>
       </div>
-
-      <img src="./images/reserve_image.png" alt="" class="product" />
+      <img src="./images/reserve_image.png" alt="" class="product back-to-position to-left delay-3" />
 
     </div>
   </section>
 
-  <!-- PICK YOUR FAVORITE -->
-  <section class="pick-your-favorite">
+
+  <!--PICK YOUR FAVORITE-->
+  <section class="pick-your-favorite scroll-spy">
     <div class="inner">
+
       <div class="text-group">
-        <img src="./images/favorite_text1.png" alt="" class="title" />
-        <img src="./images/favorite_text2.png" alt="" class="description" />
-        <div class="more">
+        <img src="./images/favorite_text1.png" alt="PICK YOUR FAVORITE" class="title back-to-position to-right delay-0" />
+        <img src="./images/favorite_text2.png" alt="다양한 메뉴를 스타벅스에서 즐겨보세요." class="description back-to-position to-right delay-1" />
+        <div class="more back-to-position to-right delay-2">
           <a href="javascript:void(0)" class="btn btn--white">자세히 보기</a>
         </div>
       </div>
+
     </div>
   </section>
 
-  <!-- RESERVE STORE -->
+
+  <!--RESERVE STORE-->
   <section class="reserve-store">
     <div class="inner">
 
       <div class="medal">
         <div class="front">
-          <img src="./images/reserve_store_medal_front.png" alt="">
+          <img src="./images/reserve_store_medal_front.png" alt="R">
         </div>
         <div class="back">
-          <img src="./images/reserve_store_medal_back.png" alt="">
+          <img src="./images/reserve_store_medal_back.png" alt="스타벅스 리저브 매장">
           <a href="javascript:void(0)" class="btn">
             매장안내
           </a>
@@ -597,25 +603,26 @@
 
     </div>
   </section>
-  
-  <!-- FIND THE STORE -->
-  <section class="find-store">
+
+
+  <!--FIND THE STORE-->
+  <section class="find-store scroll-spy">
     <div class="inner">
+
       <img src="./images/find_store_texture1.png" alt="" class="texture1" />
       <img src="./images/find_store_texture2.png" alt="" class="texture2" />
-      <img src="./images/find_store_picture1.jpg" alt="" class="picture picture1" />
-      <img src="./images/find_store_picture2.jpg" alt="" class="picture picture2" />
-
+      <img src="./images/find_store_picture1.jpg" alt="" class="picture picture1 back-to-position to-right delay-0" />
+      <img src="./images/find_store_picture2.jpg" alt="" class="picture picture2 back-to-position to-right delay-1" />
       <div class="text-group">
-        <img src="./images/find_store_text1.png" alt="" class="title " />
-        <img src="./images/find_store_text2.png" alt="" class="description " />
-        <div class="more">
-          <a href="javascript:void(0)" class="btn"></a>
+        <img src="./images/find_store_text1.png" alt="스타벅스를 가까이에서 경험해보세요." class="title back-to-position to-left delay-0" />
+        <img src="./images/find_store_text2.png" alt="고객님과 가장 가까이 있는 매장을 찾아보세요!" class="description back-to-position to-left delay-1" />
+        <div class="more back-to-position to-left delay-2">
+          <a href="javascript:void(0)" class="btn">매장찾기</a>
         </div>
       </div>
+
     </div>
   </section>
-
 
 </body>
 </html>
