--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <link rel="stylesheet" href="./css/main.css" />
 
-  <!-- GSAP & ScrollToPlugin 스크롤시 벳지나 최상단으로 올라가는버튼 보여주거나 사라디게하는효과를 지원 -->
+  <!-- GSAP & ScrollToPlugin 스크롤시 벳지나 최상단으로 올라가는버튼 보여주거나 사라지게하는 여러 애니메이션효과를 지원 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollToPlugin.min.js" integrity="sha512-nTHzMQK7lwWt8nL4KF6DhwLHluv6dVq/hNnj2PBN0xMl2KaMm1PM02csx57mmToPAodHmPsipoERRNn4pG7f+Q==" crossorigin="anonymous"></script>
   <!-- Swiper 프로모션이나 공지사항에서 그림이 스와이프되는효과 공지사항이 번갈아가며 나오는효과 등을 지원 -->
