--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <!--Google Material Icons-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
+  <link rel="stylesheet" href="./css/common.css" />
   <link rel="stylesheet" href="./css/main.css" />
 
   <!-- GSAP & ScrollToPlugin 스크롤시 벳지나 최상단으로 올라가는버튼 보여주거나 사라지게하는 여러 애니메이션효과를 지원 -->
@@ -49,6 +50,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js" integrity="sha512-90vH1Z83AJY9DmlWa8WkjkV79yfS2n2Oxhsi2dZbIv0nC4E6m5AbH8Nh156kkM7JePmqD6tcZsfad1ueoaovww==" crossorigin="anonymous"></script>
 
   <script defer src="./js/youtube.js"></script>
+  <script defer src="./js/common.js"></script>
   <script defer src="./js/main.js"></script>
 </head>
 <body>
